<resources>
    <string name="app_name">cafe4u</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="rewritepassword">Nhập lại mật khẩu</string>
    <string name="phone">Nhập số điện thoại</string>
    <string name="chat">Nhập tin nhắn</string>
    <string name="oldpassword">Nhập mật khẩu cũ</string>
    <string name="newpassword">Nhập mật khẩu mới</string>
    <string name="rewritenewpassword">Nhập lại mật khẩu mới</string>
    <string name="search">Bạn muốn đi đâu?</string>
    <string name="profile">Hồ sơ</string>
    <string name="community">Cộng đồng</string>
    <string name="listlike">Yêu thích</string>
    <string name="home">Trang chủ</string>
    <string name="email">Email</string>
    <string name="client_id">646416216522-ngmd61q1mk356nogjb2ss8tefajphm9e.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>