<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeitem"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupitem"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/community" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/likeitem"
        android:icon="@drawable/baseline_bookmarks_24"
        android:title="@string/listlike" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileitem"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile" />
</menu>