<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.home1">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="705dp"/>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/sz15dp"
        android:paddingTop="@dimen/sz20dp"
        android:paddingBottom="@dimen/sz15dp"
        android:paddingRight="@dimen/sz15dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.widget.SearchView
            android:id="@+id/search"
            android:layout_width="220dp"
            android:layout_height="55dp"


            android:layout_marginLeft="10dp"


            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_searchview" />

        <ImageButton
            android:id="@+id/btnFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sz15dp"
            android:layout_weight="1"
            android:background="@null"
            android:scaleY="2"
            android:scaleX="2"
            android:src="@drawable/baseline_filter_alt_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_home_24" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/backgroudmain"
                android:paddingLeft="@dimen/sz8dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"

                android:textSize="16sp"
                android:text="@string/home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGroup"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:backgroundTint="@color/white"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/group_bgmain" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:textColor="@color/backgroudmain"
                android:paddingLeft="@dimen/sz8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/community" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_bookmarks_24" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/backgroudmain"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/listlike" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnProfile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:textColor="@color/backgroudmain"
                android:paddingLeft="26dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/profile" />

        </LinearLayout>
    </LinearLayout>


</FrameLayout>

